@@ -28,7 +28,7 @@ from eulfedora.api import ResourceIndex
 from eulfedora.rdfns import model as modelns, relsext as relsextns, fedora_rels
 from eulfedora.util import parse_xml_object, parse_rdf, RequestFailed, datetime_to_fedoratime
 from eulfedora.xml import ObjectDatastreams, ObjectProfile, DatastreamProfile, \
-    NewPids, ObjectHistory, ObjectMethods, DsCompositeModel
+    NewPids, ObjectHistory, ObjectMethods, DsCompositeModel, FoxmlDigitalObject
 from eulxml.xmlmap.dc import DublinCore
 
 logger = logging.getLogger(__name__)
@@ -1039,6 +1039,8 @@ class DigitalObject(object):
         # object history
         self._history = None
         self._methods = None
+        # object foxml
+        self._object_xml = None
 
         # pid = None signals to create a new object, using a default pid
         # generation function.
@@ -1282,6 +1284,44 @@ class DigitalObject(object):
         self._history = [c for c in history.changed]
         return history
 
+    @property
+    def object_xml(self):
+        '''Fedora object XML as an instance of :class:`FoxmlDigitalObject`.
+        (via :meth:`REST_API. getObjectXML`).
+        '''
+        if self._object_xml is None:
+            self.getObjectXml()
+        return self._object_xml
+    
+    def getObjectXml(self):
+        if self._create:
+            return None
+        else:
+            data, url = self.api.getObjectXML(self.pid)
+            self._object_xml = parse_xml_object(FoxmlDigitalObject, data, url)
+            return self._object_xml
+        
+    @property
+    def audit_trail(self):
+        '''Fedora audit trail as an instance of :class:`eulfedora.xml.AuditTrail`
+
+        .. Note::
+
+          Since current versions of Fedora do not make the audit trail
+          available via the API calls or as a datastream, accessing
+          the audit trail requires loading the foxml for the object.
+          If an object has large, versioned XML datastreams this may
+          be slow.
+        '''
+        # NOTE: It would be nice to expose the audit trail so that it
+        # looks and behaves a bit more like other datastreams (pseudo
+        # or read-only DatastreamObject?).  At the moment, the overhead
+        # for that doesn't seem worth the possible benefits.
+        # Fedora may eventually expose the AUDIT info more directly:
+        #   https://jira.duraspace.org/browse/FCREPO-635
+        if self.object_xml:
+            return self.object_xml.audit_trail
+
     def getProfile(self):    
         """Get information about this object (label, owner, date created, etc.).
 
@@ -1374,6 +1414,13 @@ class DigitalObject(object):
             if not profile_saved:
                 cleaned = self._undo_save(saved, "failed to save object profile, rolling back changes")
                 raise DigitalObjectSaveFailure(self.pid, "object profile", to_save, saved, cleaned)
+
+            
+        if saved or (self.info_modified and profile_saved):
+            # clear out any cached object info that is now out of date
+            self._history = None
+            self._object_xml = None
+            
             
 
     def _undo_save(self, datastreams, logMessage=None):
